syntax = "proto3";

import "vector.proto";

message MonsterPosition {
  string monster_id = 1;
  Vec2 position = 2;
  Vec2 velocity = 3;
  Vec2 rotation = 4;
}

message MonsterPositionList {
  repeated MonsterPosition monster_positions = 1;
}
